--- a/ServiceWorkerWebsite.csproj
+++ b/ServiceWorkerWebsite.csproj
@@ -35,4 +35,10 @@
     <None Remove="Views\Approles\" />
     <None Remove="Views\AppRoles\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Areas\services\EmailService.cs" />
+    <Content Include="Areas\services\EmailSettings.cs" />
+    <Content Include="Areas\services\IdentityExtensions.cs" />
+  </ItemGroup>
 </Project>
